[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mol_aligned"
version = "0.0.1"
description = "Check if your Molecular Dataset is Aligned"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Peter Lippmann"},
]
urls = {homepage = "https://github.com/sciai-lab/are-my-molecules-aligned"}

dependencies = [
    "numpy",
    "pyscf==2.4",
    "tqdm",
    "scipy",
    "matplotlib",
    "pyvista",
  "pip>=24",
  "ipykernel>=6.29,<8",
  "notebook>=7,<8",
  "jupyterlab>=4,<5",
  "ipywidgets>=8,<9",
  "pre-commit",
  "pytest==7.4.4", # bumping pytest to 8.4.2 introduced issues, where fixtures that are working in 7.4.4 could no longer be found
  "gpustat",
  "gitpython", # in maintenance mode, might want to remove
]

[project.optional-dependencies]
cpu = [
    "torch==2.8.0",
    "torchvision",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_scatter-2.1.2+pt28cpu-cp311-cp311-linux_x86_64.whl ; python_version=='3.11' and sys_platform=='linux'",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_scatter-2.1.2+pt28cpu-cp312-cp312-linux_x86_64.whl ; python_version=='3.12' and sys_platform=='linux'",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_scatter-2.1.2+pt28cpu-cp313-cp313-linux_x86_64.whl ; python_version=='3.13' and sys_platform=='linux'",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_scatter-2.1.2-cp311-cp311-macosx_10_9_universal2.whl ; python_version=='3.11' and sys_platform=='darwin'",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_scatter-2.1.2-cp312-cp312-macosx_10_13_universal2.whl ; python_version=='3.12' and sys_platform=='darwin'",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_scatter-2.1.2-cp313-cp313-macosx_10_13_universal2.whl ; python_version=='3.13' and sys_platform=='darwin'",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_sparse-0.6.18+pt28cpu-cp311-cp311-linux_x86_64.whl ; python_version=='3.11' and sys_platform=='linux'",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_sparse-0.6.18+pt28cpu-cp312-cp312-linux_x86_64.whl ; python_version=='3.12' and sys_platform=='linux'",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_sparse-0.6.18+pt28cpu-cp313-cp313-linux_x86_64.whl ; python_version=='3.13' and sys_platform=='linux'",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_sparse-0.6.18-cp311-cp311-macosx_11_0_universal2.whl ; python_version=='3.11' and sys_platform=='darwin'",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_sparse-0.6.18-cp312-cp312-macosx_11_0_universal2.whl ; python_version=='3.12' and sys_platform=='darwin'",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_sparse-0.6.18-cp313-cp313-macosx_11_0_universal2.whl ; python_version=='3.13' and sys_platform=='darwin'",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_cluster-1.6.3+pt28cpu-cp311-cp311-linux_x86_64.whl ; python_version=='3.11' and sys_platform=='linux'",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_cluster-1.6.3+pt28cpu-cp312-cp312-linux_x86_64.whl ; python_version=='3.12' and sys_platform=='linux'",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_cluster-1.6.3+pt28cpu-cp313-cp313-linux_x86_64.whl ; python_version=='3.13' and sys_platform=='linux'",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_cluster-1.6.3-cp311-cp311-macosx_10_9_universal2.whl ; python_version=='3.11' and sys_platform=='darwin'",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_cluster-1.6.3-cp312-cp312-macosx_10_13_universal2.whl ; python_version=='3.12' and sys_platform=='darwin'",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.8.0+cpu/torch_cluster-1.6.3-cp313-cp313-macosx_10_13_universal2.whl ; python_version=='3.13' and sys_platform=='darwin'",
    "lightning==2.5.5",
    "torch-geometric",
    "e3nn",
    "torchmetrics",
    "tensor_frames @ git+https://github.com/sciai-lab/tensor_frames.git@044f4929c43c59b21e6ae8716a97cacb80775801#",
]
cuda = [
    "torch==2.8.0",
    "torchvision",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.8.0+cu126/torch_scatter-2.1.2+pt28cu126-cp311-cp311-linux_x86_64.whl ; python_version=='3.11'",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.8.0+cu126/torch_scatter-2.1.2+pt28cu126-cp312-cp312-linux_x86_64.whl ; python_version=='3.12'",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.8.0+cu126/torch_scatter-2.1.2+pt28cu126-cp313-cp313-linux_x86_64.whl ; python_version=='3.13'",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.8.0+cu126/torch_sparse-0.6.18+pt28cu126-cp311-cp311-linux_x86_64.whl ; python_version=='3.11'",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.8.0+cu126/torch_sparse-0.6.18+pt28cu126-cp312-cp312-linux_x86_64.whl ; python_version=='3.12'",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.8.0+cu126/torch_sparse-0.6.18+pt28cu126-cp313-cp313-linux_x86_64.whl ; python_version=='3.13'",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.8.0+cu126/torch_cluster-1.6.3+pt28cu126-cp311-cp311-linux_x86_64.whl ; python_version=='3.11'",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.8.0+cu126/torch_cluster-1.6.3+pt28cu126-cp312-cp312-linux_x86_64.whl ; python_version=='3.12'",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.8.0+cu126/torch_cluster-1.6.3+pt28cu126-cp313-cp313-linux_x86_64.whl ; python_version=='3.13'",
    "lightning==2.5.5",
    "torch-geometric",
    "e3nn",
    "torchmetrics",
    "tensor_frames @ git+https://github.com/sciai-lab/tensor_frames.git@044f4929c43c59b21e6ae8716a97cacb80775801#",
]
[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = true
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.isort]
known_first_party = ["mol_aligned"]
profile = "black"

[tool.black]
line-length = 99

[tool.uv]
conflicts = [
  [ { extra = "cpu" }, { extra = "cuda" } ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cuda", extra = "cuda" }
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cuda", extra = "cuda" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.build-backend]
module-root = ""